<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_kill_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/RedTheme"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/trench_edittext_bg_selector"
        android:padding="10dp" 
        android:hint="@string/account"
        android:textColor="@color/grey"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/trench_edittext_bg_selector"
        android:padding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/grey"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_remember_password"
            style="@style/trench_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:text="@string/remember_password"
            android:textColor="@color/lightgrey" />

        <TextView
            android:id="@+id/tv_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/find_password"
            android:textColor="@color/RedTheme" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/register"
            android:textColor="@color/RedTheme" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/down_load_install_selector"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:gravity="center_horizontal"
            android:text="@string/m_enterprise_qq"
            android:textColor="@color/RedTheme"
            android:textIsSelectable="true" />
    </RelativeLayout>

</LinearLayout>