<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="5dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/o_password"
                android:textColor="@color/grey"
                android:textSize="15.0sp" />

            <EditText
                android:id="@+id/et_o_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:background="@drawable/trench_edittext_bg_selector"
                android:hint="@string/o_password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="5dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/n_password"
                android:textColor="@color/grey"
                android:textSize="15.0sp" />

            <EditText
                android:id="@+id/et_n_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/trench_edittext_bg_selector"
                android:hint="@string/n_password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="5dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/r_password"
                android:textColor="@color/grey"
                android:textSize="15.0sp" />

            <EditText
                android:id="@+id/et_r_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:background="@drawable/trench_edittext_bg_selector"
                android:hint="@string/r_password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:textSize="15.0sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_password_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/down_load_install_selector"
        android:padding="10dip"
        android:text="@string/commit"
        android:textColor="@color/white1"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>