<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white1"
    android:gravity="center_horizontal">
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
	        android:id="@+id/tv_title"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="@color/RedTheme"
	        android:gravity="center"
	        android:padding="10dp"
	        android:text="@string/m_about_us"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:textStyle="bold" />
	    
	    <ImageView
	        android:id="@+id/iv_share"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:clickable="true"
	        android:onClick="share"
	        android:padding="5dp"
	        android:paddingRight="15dp"
	        android:src="@drawable/share" 
	        android:background="@drawable/btn_back_yellow"/>

	    <ImageView
	        android:id="@+id/iv_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:paddingLeft="10dp"
            android:paddingRight="10dp"
	        android:background="@drawable/btn_back_yellow"
	        android:clickable="true"
	        android:onClick="back"
	        android:src="@drawable/back_selected" />

    </RelativeLayout>
    
    <ImageView 
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="20dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/black1"
        android:layout_margin="10dp"/>
    
    <TextView
        android:id="@+id/tv_versions" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versions"
        android:textColor="@color/graythem1"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_app"
        android:textColor="@color/grey"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_enterprise_qq"
        android:textColor="@color/graythem1"
        android:layout_marginLeft="30dp"
        android:textIsSelectable="true"
        android:textSize="15sp"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_enterprise_qq_group"
        android:textColor="@color/graythem1"
        android:layout_marginLeft="30dp"
        android:textIsSelectable="true"
        android:textSize="15sp"
        />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_wx_gzhh"
        android:textColor="@color/graythem1"
        android:layout_marginLeft="30dp"
        android:textIsSelectable="true"
        android:textSize="15sp"
        />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Copyright@2010-2015"
        android:gravity="center"
        android:layout_marginTop="100dp"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="广州传诺网络科技有限公司"
        android:gravity="center"/>

</LinearLayout>





