<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_margin="15dp">

            <LinearLayout
                android:id="@+id/RelativeLayout_Rank"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:gravity="center_vertical"
                android:layout_margin="5dp"
                >

                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:id="@+id/tv_user_id" 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true" 
   					android:focusableInTouchMode="true"
                    android:text="999999"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp"
                    android:layout_marginLeft="7dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/RelativeLayout_AccountSrtting"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_margin="5dp"
                android:gravity="center_vertical">

                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="1380013800"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/RelativeLayout_SpreadGL"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:visibility="gone">

                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp"
                    android:layout_marginLeft="24dp"/>
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp" 
                    />
            </LinearLayout>

            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_margin="5dp"
                android:gravity="center_vertical">

                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alipay"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp"
                    android:layout_marginLeft="10dp"/>
                <EditText
                    android:id="@+id/et_zfb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:hint="@string/alipay_hint"
                    android:textColor="@color/grey"
                    android:background="@drawable/trench_edittext_bg_selector"
        			android:padding="10dp"
                    android:textSize="15.0sp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_margin="5dp"
                android:gravity="center_vertical">

                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caifutong"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp"
                    android:layout_marginLeft="10dp"/>
                <EditText
                    android:id="@+id/et_cft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:hint="@string/caifutong_hint"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp" 
                    android:background="@drawable/trench_edittext_bg_selector"
        			android:padding="10dp"/>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp"/>
                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:hint="@string/address_hint"
                    android:textColor="@color/grey"
                    android:textSize="15.0sp" 
                    android:gravity="top"
                    android:minLines="3"
                    android:background="@drawable/trench_edittext_bg_selector"
        			android:padding="10dp"/>
            </LinearLayout>

        </LinearLayout>
        

    <Button
        android:id="@+id/btn_userInfo_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/down_load_install_selector"
        android:text="@string/commit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dip"
        android:textColor="@color/white1" 
        android:layout_margin="15dp"/>

</LinearLayout>



















